# python-edge-addons-api

./: .gitignore  .mise.toml  .pre-commit-config.yaml  README.md  pyproject.toml  script.py
.github/workflows/: main.yml  publish.yml
edge_addons_api/: client.py  exceptions.py  responses.py
tests/: test_client.py
