[tool.poetry]
name = "edge-addons-api"
version = "0.3.2"
description = "API client for uploading addons to the Edge store"
authors = ["Malachi Soord <inverse.chi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "edge_addons_api"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest-socket = ">=0.5.1,<0.7.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
